--- a/WebApp/Views/Account/Details.cshtml
+++ b/WebApp/Views/Account/Details.cshtml
@@ -5,93 +5,98 @@
 }
 <section class="account-details">
     <div class="container">
+        <aside>
+            <partial name="~/Views/Account/_AccountProfile.cshtml" />
+        </aside>
 
-        @if (!string.IsNullOrEmpty(TempData["StatusMessage"]?.ToString()))
-        {
-            <div class="alert alert-danger">
-                @TempData["StatusMessage"]
-            </div>
-        }
-
-        <form class="form-basic" method="post" asp-controller="Account" asp-action="UpdateBasicInfo">
-            <h2>Account Details</h2>
-            <h5>Basic Info</h5>
-
-            <div class="form-content">
-                <div id="form-firstname" class="input-group">
-                    <label asp-for=Basic!.FirstName></label>
-                    <span asp-validation-for="Basic!.FirstName"> </span>
-                    <input asp-for="Basic!.FirstName" />
+       <div class="content" >
+            @if (!string.IsNullOrEmpty(TempData["StatusMessage"]?.ToString()))
+            {
+                <div class="alert alert-danger">
+                    @TempData["StatusMessage"]
                 </div>
+            }
 
-                <div id="form-lastname" class="input-group">
-                    <label asp-for=Basic!.LastName></label>
-                    <span asp-validation-for="Basic!.LastName"> </span>
-                    <input asp-for="Basic!.LastName" />
+            <form class="form-basic" method="post" asp-controller="Account" asp-action="UpdateBasicInfo">
+                <h2>Account Details</h2>
+                <h5>Basic Info</h5>
+
+                <div class="form-content">
+                    <div id="form-firstname" class="input-group">
+                        <label asp-for=Basic!.FirstName></label>
+                        <span asp-validation-for="Basic!.FirstName"> </span>
+                        <input asp-for="Basic!.FirstName" />
+                    </div>
+
+                    <div id="form-lastname" class="input-group">
+                        <label asp-for=Basic!.LastName></label>
+                        <span asp-validation-for="Basic!.LastName"> </span>
+                        <input asp-for="Basic!.LastName" />
+                    </div>
+
+                    <div id="form-email" class="input-group">
+                        <label asp-for=Basic!.Email></label>
+                        <span asp-validation-for="Basic!.Email"> </span>
+                        <input asp-for="Basic!.Email" />
+                    </div>
+
+                    <div id="form-phone" class="input-group">
+                        <label asp-for=Basic!.PhoneNumber></label>
+                        <span asp-validation-for="Basic!.PhoneNumber"> </span>
+                        <input asp-for="Basic!.PhoneNumber" />
+                    </div>
+
+                    <div id="form-bio" class="input-group">
+                        <label asp-for=Basic!.Bio> <span>(optional)</span></label>
+                        <textarea asp-for="Basic!.Bio"></textarea>
+                    </div>
+
+                    <div id="form-buttons">
+                        <button class="btn-gray" type="reset">Cancel</button>
+                        <button class="btn-theme" type="submit">Save changes</button>
+                    </div>
+
+
                 </div>
+            </form>
 
-                <div id="form-email" class="input-group">
-                    <label asp-for=Basic!.Email></label>
-                    <span asp-validation-for="Basic!.Email"> </span>
-                    <input asp-for="Basic!.Email" />
+            <form class="form-address" method="post" asp-controller="Account" asp-action="UpdateAddressInfo">
+
+                <h5>Address</h5>
+
+                <div class="form-content">
+                    <div id="form-addressline_1" class="input-group">
+                        <label asp-for=Address!.Addressline_1>Address line 1</label>
+                        <span asp-validation-for="Address!.Addressline_1"> </span>
+                        <input asp-for="Address!.Addressline_1" />
+                    </div>
+
+                    <div id="form-addressline_2" class="input-group">
+                        <label asp-for=Address!.Addressline_2>Address line 2 <span>(optianal)</span></label>
+                        <span asp-validation-for="Address!.Addressline_2"> </span>
+                        <input asp-for="Address!.Addressline_2" />
+                    </div>
+
+                    <div id="form-postalcode" class="input-group">
+                        <label asp-for=Address!.PostalCode></label>
+                        <span asp-validation-for="Address!.PostalCode"> </span>
+                        <input asp-for="Address!.PostalCode" />
+                    </div>
+
+                    <div id="form-city" class="input-group">
+                        <label asp-for=Address!.City></label>
+                        <span asp-validation-for="Address!.City"> </span>
+                        <input asp-for="Address!.City" />
+                    </div>
+
+                    <div class="form-buttons">
+                        <button class="btn-gray" type="reset">Cancel</button>
+                        <button class="btn-theme" type="submit">Save changes</button>
+                    </div>
+
                 </div>
-
-                <div id="form-phone" class="input-group">
-                    <label asp-for=Basic!.PhoneNumber></label>
-                    <span asp-validation-for="Basic!.PhoneNumber"> </span>
-                    <input asp-for="Basic!.PhoneNumber" />
-                </div>
-
-                <div id="form-bio" class="input-group">
-                    <label asp-for=Basic!.Bio> <span>(optional)</span></label>
-                    <textarea asp-for="Basic!.Bio"></textarea>
-                </div>
-
-                <div id="form-buttons">
-                    <button class="btn-gray" type="reset">Cancel</button>
-                    <button class="btn-theme" type="submit">Save changes</button>
-                </div>
-
-
-            </div>
-        </form>
-
-        <form class="form-address" method="post" asp-controller="Account" asp-action="UpdateAddressInfo">
-
-            <h5>Address</h5>
-
-            <div class="form-content">
-                <div id="form-addressline_1" class="input-group">
-                    <label asp-for=Address!.Addressline_1>Address line 1</label>
-                    <span asp-validation-for="Address!.Addressline_1"> </span>
-                    <input asp-for="Address!.Addressline_1" />
-                </div>
-
-                <div id="form-addressline_2" class="input-group">
-                    <label asp-for=Address!.Addressline_2>Address line 2 <span>(optianal)</span></label>
-                    <span asp-validation-for="Address!.Addressline_2"> </span>
-                    <input asp-for="Address!.Addressline_2" />
-                </div>
-
-                <div id="form-postalcode" class="input-group">
-                    <label asp-for=Address!.PostalCode></label>
-                    <span asp-validation-for="Address!.PostalCode"> </span>
-                    <input asp-for="Address!.PostalCode" />
-                </div>
-
-                <div id="form-city" class="input-group">
-                    <label asp-for=Address!.City></label>
-                    <span asp-validation-for="Address!.City"> </span>
-                    <input asp-for="Address!.City" />
-                </div>
-
-                <div class="form-buttons">
-                    <button class="btn-gray" type="reset">Cancel</button>
-                    <button class="btn-theme" type="submit">Save changes</button>
-                </div>
-
-            </div>
-        </form>
+            </form>
+       </div>
     </div>
 
 
