--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -3,72 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="https://kit.fontawesome.com/2eb5533ec7.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/2eb5533ec7.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-
+    
     <title>@ViewData["Title"] - Silicon</title>
 
 </head>
 <body>
 
-    <header>
-        <div class="container">
-            <a id="logo" asp-controller="Home" asp-action="Index"><img src="~/images/Silicon Logotype - Light Mode.svg" alt=""></a>
-
-            <div id="menu">
-                <nav>
-                    <a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
-                    <a class="menu-link" asp-controller="Home" asp-action="Index">Features</a>
-                    <a class="menu-link" asp-controller="Account" asp-action="Details">Contact</a>
-                </nav>
-            </div>
-
-            <div class="btn-switch">
-                <label>Light</label>
-                <label class="switch" for="switch-mode">
-                    <input type="checkbox" id="switch-mode" />
-                    <span class="slider round"></span>
-                </label>
-                <label>Dark</label>
-            </div>
-
-            <div class="account-buttons">
-                <a class="btn-gray" asp-controller="Auth" asp-action="SignIn"><i class="fa-solid fa-arrow-right-to-bracket"></i><span>Sign In</span></a>
-                <a class="btn-theme" asp-controller="Auth" asp-action="SignUp"><i class="fa-regular fa-user"></i><span>Sign Up</span></a>
-            </div>
-
-        </div>
-    </header>
-
-    <main>
+   
 
         @RenderBody()
 
-    </main>
-
-    <footer>
-        <div class="container">
-            @if (!Context.Request.Path.Equals("/SignIn", StringComparison.OrdinalIgnoreCase) &&
-            !Context.Request.Path.Equals("/SignUp", StringComparison.OrdinalIgnoreCase))
-            {
-                <div class="social-media">
-                    <a class="btn-social" href="#"><i class="fa-brands fa-facebook"></i></a>
-                    <a class="btn-social" href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
-                    <a class="btn-social" href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a class="btn-social" href="#"><i class="fa-brands fa-youtube"></i></a>
-                </div>
-            }
-            <p>
-                © 2024 Silicon. All rights reserved. Pulvinar urna condimentum amet tempor, ornare integer. Lorem odio justo malesuada suspendisse viverra aliquet
-                quisque turpis non. Feugiat in odio non nunc ornare consectetur.
-            </p>
-        </div>
-    </footer>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
-    </script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
 
 </body>
 </html>
