Home Page Design Compeleted.

--- a/WebApp/Views/Auth/SignIn.cshtml
+++ b/WebApp/Views/Auth/SignIn.cshtml
@@ -41,7 +41,7 @@
                 </div>
 
                 <div class="form-button">
-                <button class="btn-theme-s" type="submit"><i class="fa-regular fa-arrow-left-tobracket"></i>Sign in</button>
+                <button class="btn btn-theme" type="submit">Sign in</button>
                 </div>
                 <a id="form-forgot-password" asp-controller="Accout" asp-action="Forgot">Forgot your password?</a>
             </div>
