--- a/WebApp/Views/Auth/SignUp.cshtml
+++ b/WebApp/Views/Auth/SignUp.cshtml
@@ -61,7 +61,7 @@
                 </div>
 
                 <div class="form-button">
-                    <button class="btn-theme-s" type="submit"><i class="fa-regular fa-arrow-left-tobracket"></i>Sign up</button>
+                    <button class="btn-theme-s" type="submit">Sign up</button>
                 </div>
       
             </div>
