--- a/WebApp/Views/Default/Home.cshtml
+++ b/WebApp/Views/Default/Home.cshtml
@@ -1,4 +1,13 @@
 ﻿@{
     ViewData["Title"] = "Home";
 }
+
+
+<partial name="_Showcase" />
+<partial name="_Features" />
+<partial name="_Mood" />
+<partial name="_Manage" />
+<partial name="_Devices" />
+<partial name="_Tools" />
 <partial name="_SubscribeToNewsletter" />
+
