--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/2eb5533ec7.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    
+    <script defer src="https://kit.fontawesome.com/2eb5533ec7.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <title>@ViewData["Title"] - Silicon</title>
 
 </head>
 <body>
 
+
+
+    <div class="wrapper">
+        <main>
+            <partial name= "_Header" />
+            @RenderBody()
+        </main>
+        <partial name= "_Footer" />
+    </div>
    
 
-        @RenderBody()
+     
 
     <script src="~/js/site.js" asp-append-version="true"></script>
-
 </body>
 </html>
