--- a/WebApp/Views/_ViewImports.cshtml
+++ b/WebApp/Views/_ViewImports.cshtml
@@ -2,3 +2,5 @@
 @using WebApp.ViewModels
 @using Infrasturcture.Entities
 @using Microsoft.AspNetCore.Identity
+@inject UserManager<UserEntity> UserManager
+@inject SignInManager<UserEntity> SignInManager
