--- a/WebApp/Views/Auth/SignIn.cshtml
+++ b/WebApp/Views/Auth/SignIn.cshtml
@@ -4,7 +4,11 @@
 }
 <section id="signin">
     <div class="container">
-        
+        <div class="title">
+            <h1>Welcome Back</h1>
+            <p>Don't have an account yet?' <a asp-asp-controller="Auth" asp-action="SignUp">Sign up here</a>.</p>
+        </div>
+       
         @if (!string.IsNullOrEmpty(ViewData["StatusMessage"]?.ToString()))
         {
             <div class="alert alert-danger">
@@ -15,8 +19,7 @@
        
         
         <form method="post" asp-controller="Auth" asp-action="SignIn" asp-route-ReturnUrl="@ViewData["ReturnUrl"]" novalidate>
-            <h1>Welcome Back</h1>
-            <p>Don't have an account yet?' <a asp-asp-controller="Auth" asp-action="SignUp">Sign up here</a>.</p>
+            
 
             <div class="form-content">
 
