--- a/WebApp/Views/Shared/_Header.cshtml
+++ b/WebApp/Views/Shared/_Header.cshtml
@@ -36,9 +36,9 @@
                {
                   <div class="profile">
                       <div class="profile-image">
-                          <a asp-action="Details" asp-controller="Account"></a>
+                          <a asp-action="Details" asp-controller="Account">
                             <img src="~/images/uploads/profiles/@user!.ProfileImage" />
-
+                        </a>
                       </div>
 
                   </div>
