--- a/WebApp/Views/Account/_AccountProfile.cshtml
+++ b/WebApp/Views/Account/_AccountProfile.cshtml
@@ -7,11 +7,11 @@
      <section class="account-profile">
          <div class="profile">
              <div class="profile-image">
-                <img src="~/images/uploads/profiles/@user.ProfileImage" alt="@user.FirstName @user.LastName"  />
+                <img src="~/images/uploads/profiles/@user.ProfileImage" alt="@user.FirstName @user.LastName" />
 
-                <form enctype="multipart/form-data" method="post" asp-action="UploadProfileImage" asp-asp-controller="Account">
+                <form enctype="multipart/form-data" method="post" asp-action="UploadProfileImage" asp-controller="Account">
                      <input id="fileUploader" type="file" name="file" hidden />
-                    <label for="fileUploader" class="btn btn-circle btn-circle-sm"><i class="fa-solid fa-arrows-rotate"></i></label>
+                    <label for="fileUploader" class="btn btn-circle-sm"><i class="fa-solid fa-arrows-rotate"></i></label>
 
                  </form>
              </div>
