--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -553,6 +553,103 @@ form .field-validation-error {
   padding: 2px 5px;
 }
 
+.courses {
+  padding-top: 3rem;
+  padding-bottom: 5rem;
+}
+.courses .container .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+.courses .container .header #form-filters {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 1.5rem;
+}
+.courses .course-items {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 2rem;
+}
+.courses .course-items .course {
+  position: relative;
+  display: block;
+  border-radius: 8px;
+  overflow: hidden;
+  text-decoration: none;
+  box-shadow: 0 0 14px -4px var(--color-gray-500);
+  color: var(--color-gray-700);
+}
+.courses .course-items .course:hover {
+  box-shadow: 0 0 14px -4px var(--color-gray-900);
+}
+.courses .course-items .course .bestseller {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  background-color: var(--color-success-dark);
+  padding: 4px 12px;
+  border-radius: 4px;
+}
+.courses .course-items .course .bookmark {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  z-index: 999;
+}
+.courses .course-items .course img {
+  width: 100%;
+}
+.courses .course-items .course .content {
+  padding: 1rem 2rem;
+}
+.courses .course-items .course .content .title {
+  font-size: 20px;
+}
+.courses .course-items .course .content .author {
+  font-size: 14px;
+  margin: 0.5rem 0;
+}
+.courses .course-items .course .content .pricing {
+  display: flex;
+  gap: 1rem;
+  font-size: 18px;
+  font-weight: 600;
+}
+.courses .course-items .course .content .discount {
+  color: var(--color-danger-dark);
+  font-size: 18px;
+  font-weight: 600;
+}
+.courses .course-items .course .content .orginal {
+  color: var(--color-theme);
+  font-size: 18px;
+  font-weight: 600;
+}
+.courses .course-items .course .content .discount-enabled {
+  color: var(--color-gray-600);
+  text-decoration: line-through;
+  font-size: 18px;
+  font-weight: 400;
+}
+.courses .course-items .course .footer {
+  color: var(--color-gray-600);
+  border-top: 1px solid var(--color-gray-400);
+  display: flex;
+  gap: 2rem;
+  margin-top: 1rem;
+  padding-top: 1rem;
+}
+.courses .course-items .course .footer .hours i {
+  margin-right: 5px;
+}
+.courses .course-items .course .footer .likes i {
+  margin-right: 5px;
+}
+
 #devices {
   background-color: var(--color-gray-100);
 }
