--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -553,6 +553,86 @@ form .field-validation-error {
   padding: 2px 5px;
 }
 
+.account-details .container {
+  display: flex;
+}
+.account-details .container .content .title h5 {
+  color: var(--color-theme);
+  margin-top: 3rem;
+}
+.account-details .container .content .form-basic .form-content {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: "firstname lastname" "email phone" "bio bio" "submit submit";
+}
+.account-details .container .content #form-firstname {
+  grid-area: firstname;
+}
+.account-details .container .content #form-lastname {
+  grid-area: lastname;
+}
+.account-details .container .content #form-email {
+  grid-area: email;
+}
+.account-details .container .content #form-phone {
+  grid-area: phone;
+}
+.account-details .container .content #form-bio {
+  grid-area: bio;
+}
+.account-details .container .content #form-buttons {
+  grid-area: submit;
+  width: 40%;
+  display: flex;
+}
+.account-details .container .content .form-address {
+  margin-top: 30px;
+  margin-right: 15px;
+}
+.account-details .container .content .form-address #form-buttons-address {
+  grid-area: submit;
+  width: 40%;
+  display: flex;
+}
+.account-details .container .content .form-address .form-content {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: "Address1 Address1" "Address2 Address2" "postal city" "submit submit";
+}
+.account-details .container .content #form-addressline_1 {
+  grid-area: Address1;
+}
+.account-details .container .content #form-addressline_2 {
+  grid-area: Address2;
+}
+.account-details .container .content #form-postalcode {
+  grid-area: postal;
+}
+.account-details .container .content #form-city {
+  grid-area: city;
+}
+.account-details .container .content #form-buttons-address {
+  grid-area: submit;
+  width: 40%;
+  display: flex;
+}
+.account-details .profile {
+  width: 400px;
+  margin-right: 40px;
+}
+.account-details .form-container {
+  flex: 1;
+}
+
+.account-profile .container aside .profile-image img {
+  width: 150px;
+  height: 150px;
+}
+.account-profile .container aside nav .btn-bottuns {
+  width: 18%;
+}
 .courses {
   padding-top: 3rem;
   padding-bottom: 5rem;
