--- a/WebApp/wwwroot/css/site.scss
+++ b/WebApp/wwwroot/css/site.scss
@@ -10,7 +10,7 @@
 @import 'scss/components/_containers.scss';
 @import 'scss/components/_forms.scss';
 
-@import 'scss/sections/_account_details.scss';
+@import 'scss/sections/_details.scss';
 @import 'scss/sections/_account_profile.scss';
 @import 'scss/sections/_courses.scss';
 @import 'scss/sections/_devices.scss';
